# HW_python_task_3

task3/: Untitled.ipynb  pyproject.toml
