[tool.poetry]
name = "task3"
version = "0.1.0"
description = ""
authors = ["kultyshev.denis <kultyshev.denis@wb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
jupyter = "^1.0.0"
notebook = "^7.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
